# RichieSafe

./: .firebaserc  .gitignore  README.md  coderabbit_test.txt  package-lock.json
.github/workflows/: build-wasm.yml  preview.yml  release.yml
core/: Cargo.toml
core/crates/richiesafe-core/: Cargo.toml
core/crates/richiesafe-core/src/: lib.rs  util.rs
core/crates/richiesafe-core/src/crypto/: aead.rs  kdf.rs  mod.rs  rng.rs
core/crates/richiesafe-core/src/models/: entry.rs
core/crates/richiesafe-core/src/vault/: format.rs  header.rs  mod.rs  ops.rs  ops.rs.append
core/crates/richiesafe-ffi/: Cargo.toml
core/crates/richiesafe-wasm/: Cargo.toml
core/crates/richiesafe-wasm/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
web/: .env.example  .firebaserc  capacitor.config.json  firebase.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules  tailwind.config.js  tsconfig.json  vite.config.js
web/.firebase/: hosting.ZGlzdA.cache
web/android/: capacitor.settings.gradle
web/android/app/: build.gradle  capacitor.build.gradle  google-services.json  release.keystore
web/android/app/src/main/java/com/richiesafe/app/: MainActivity.java
web/android/app/src/main/res/values/: strings.xml
web/public/: 404.html  offline.html
web/src/: App.jsx  auth.ts  declarations.d.ts  firebase.ts  index.css  main.jsx  sync.ts
web/src/components/: ErrorBoundary.jsx
web/src/context/: SecurityContext.tsx
web/src/utils/: storage.js
