[package]
name = "richiesafe-desktop"
version = "0.1.0"
description = "RichieSafe Desktop App"
authors = ["Ricardo"]
documentation = ""
license = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Integration with core if we need native ops, but for now we use WASM in web
# richiesafe-core = { path = "../core/crates/richiesafe-core" }

[features]
# default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
