[package]
name = "richiesafe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde", "js"] }
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
