[package]
name = "richiesafe-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
richiesafe-core = { path = "../richiesafe-core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
uuid = { version = "1.4.1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
serde_cbor = "0.11"
getrandom = { version = "0.2", features = ["js"] }
bip39 = "2.2.2"
rand = "0.8.5"
